k8s/specialties/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: specialties-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/specialties
            pathType: "Prefix"
            backend:
              service:
                name: specialties-service
                port:
                  number: 80
